# geotext

./: LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml  lint.yml
src/geotext/: geotext.py
tests/: test_geotext.py
