[project]
name = "geotext"
version = "0.4.0"
description = "Geotext extracts countriy and city mentions from text"
authors = [
    { name = "Philippe Miron", email = "philippemiron@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.4",
    "pytest>=8.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/geotext"]
